主页跳转按钮和空页面初始化

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 **/.ipynb_checkpoints
 /build/
 /app/build/
+/app/src/main/assets/efficientdet-lite0.tflite
+/app/src/main/assets/efficientdet-lite1.tflite
+/app/src/main/assets/efficientdet-lite2.tflite
+/app/src/main/assets/*.tflite
