--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -38,7 +39,9 @@
         android:label="@string/app_name"
         android:allowBackup="true"
         android:taskAffinity=""
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:ignore="AllowBackup">
+
 
         <activity
             android:name=".MainActivity"
